--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           npm install
           npm run build
+          npm run dev
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
