--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: '20.11.0'
+          node-version: 16
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
@@ -26,7 +26,6 @@ jobs:
         run: |
           npm install
           npm run build
-          npm run dev
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
