--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0"
   },
