--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env
 .DS_STORE
 node_modules
 scripts/flow/*/.flowconfig
@@ -23,6 +24,7 @@ chrome-user-data
 .vscode
 *.swp
 *.swo
+
 
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
