--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
-    "nodemailer": "^6.9.13",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.10.3",
