--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
