--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "gsap": "^3.14.2",
     "nodemailer": "^6.9.14",
     "react": "^19.0.0",
     "react-bootstrap": "^2.9.2",
