--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0",
+    "resend": "^6.6.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
